refactor(comment): domain 모듈 주석 전량 제거 및 설계 근거 AGENTS.md 이관
챕터 03에 따라 backend/domain 734개 파일의 java 주석 11,824줄을 전부 제거했다.
동작 변경은 없다 - 주석만 제거하고 import·어노테이션·시그니처는 손대지 않았다.

분류별 처리:
- A(가드)는 챕터 01에서 이관 완료되어 중복 작업하지 않았다.
- C(비즈니스 규칙)는 docs/domain/*.md에 이미 전부 기술돼 있어 그 문서를
  수정하지 않았다. 배달팁 배타·단조성, 주문 금액 공식, 상품 상태 전이를
  전수 대조해 확인했다.
- B(설계 근거)만 backend/domain/AGENTS.md에 12개 절로 신설했다. replace-all
  교체와 변경이력 1행 규칙, PG 왕복을 트랜잭션 밖에 두는 이유, 부분실패의
  최종상태 판정, MenuReview가 reviewId를 갖지 않는 이유, 대표점이 centroid가
  아닌 이유(경계 원천 3,558건 중 47건이 centroid 이탈) 등이다.
- D(단순 서술)와 @param/@return 태그는 삭제했다.

컨텍스트 단위로 6단계로 끊어 진행했고 단계마다 ./gradlew :domain:build를
통과시켰다. .because(59건)·@DisplayName(159파일)·어노테이션은 전량 보존됐고,
문서 앵커 36개(파일 18·코드 요소 18)의 실재를 확인했다.

플랜 실측치 2건이 실제와 달라 기록해 둔다 - // NOSONAR는 리포 전체에 0건이고
(플랜은 1건), .because는 44건이 아니라 59건이다.